添加商品按钮

--- a/design/index.html
+++ b/design/index.html
@@ -78,32 +78,64 @@
 	<hr>
 	<h2>推荐商品</h2>
 	<div class=rec>
-		<figure class=item><a href=item.html>
-			<img src=1.jpeg alt>
+		<figure class=item>
+			<a href=item.html><img src=1.jpeg alt></a>
 			<figcaption>
 				<big>商品示例</big><br>
-				<small>¥ 12345.00</small>
-			</figcaption>
-		</a></figure>
-		<figure class=item>
-			<img src=1.jpeg alt>
-			<figcaption>
-				商品示例<br>
-				<small>¥ 12345.00</small>
+				<small>¥ 12345.00</small><br>
+				<img class=like src=like.svg alt="喜欢">
+				<img class=cart src=cart.svg alt="购买">
+				<img class=diff src=diff.svg alt="对比">
 			</figcaption>
 		</figure>
 		<figure class=item>
-			<img src=1.jpeg alt>
+			<a href=item.html><img src=1.jpeg alt></a>
 			<figcaption>
-				商品示例<br>
-				<small>¥ 12345.00</small>
+				<big>商品示例</big><br>
+				<small>¥ 12345.00</small><br>
+				<img class=like src=like.svg alt="喜欢">
+				<img class=cart src=cart.svg alt="购买">
+				<img class=diff src=diff.svg alt="对比">
 			</figcaption>
 		</figure>
 		<figure class=item>
-			<img src=1.jpeg alt>
+			<a href=item.html><img src=1.jpeg alt></a>
 			<figcaption>
-				商品示例<br>
-				<small>¥ 12345.00</small>
+				<big>商品示例</big><br>
+				<small>¥ 12345.00</small><br>
+				<img class=like src=like.svg alt="喜欢">
+				<img class=cart src=cart.svg alt="购买">
+				<img class=diff src=diff.svg alt="对比">
+			</figcaption>
+		</figure>
+		<figure class=item>
+			<a href=item.html><img src=1.jpeg alt></a>
+			<figcaption>
+				<big>商品示例</big><br>
+				<small>¥ 12345.00</small><br>
+				<img class=like src=like.svg alt="喜欢">
+				<img class=cart src=cart.svg alt="购买">
+				<img class=diff src=diff.svg alt="对比">
+			</figcaption>
+		</figure>
+		<figure class=item>
+			<a href=item.html><img src=1.jpeg alt></a>
+			<figcaption>
+				<big>商品示例</big><br>
+				<small>¥ 12345.00</small><br>
+				<img class=like src=like.svg alt="喜欢">
+				<img class=cart src=cart.svg alt="购买">
+				<img class=diff src=diff.svg alt="对比">
+			</figcaption>
+		</figure>
+		<figure class=item>
+			<a href=item.html><img src=1.jpeg alt></a>
+			<figcaption>
+				<big>商品示例</big><br>
+				<small>¥ 12345.00</small><br>
+				<img class=like src=like.svg alt="喜欢">
+				<img class=cart src=cart.svg alt="购买">
+				<img class=diff src=diff.svg alt="对比">
 			</figcaption>
 		</figure>
 	</div>
