--- a/design/index.html
+++ b/design/index.html
@@ -2,6 +2,12 @@
 <meta charset=utf-8>
 <link rel=stylesheet href=style.css>
 <title>首页设计</title>
+<header>
+	<div class=w>
+		<img src=user.svg alt="账户">
+		<span class=t>登录</span>
+	</div>
+</header>
 <h1 id=title>××商城</h1>
 <nav class=mainnav>
 	<ul>
